--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -1,5 +1,11 @@
 .canvas{
     width:50%;
     height: 50%;
-    
+}
+
+@media (max-width: 850px) {
+    .canvas{
+        width: 100%;
+        height: 100%;
+    }
 }
