--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -2,6 +2,14 @@
     height: 15%;
 }
 
-.block{
-    display: block;
+
+
+@media (max-width: 850px) {
+    .block{
+        display: block;
+    }
+    .col{
+        margin-top: 1rem;
+    }
 }
+
