--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -1,3 +1,8 @@
+.canvasDiv{
+    display:flex;
+    justify-content: center;
+    flex-direction: column;
+}
 
 .canvas{
     width:50%;
@@ -9,16 +14,37 @@
     .canvas{
         width: 100%;
         height: 100%;
-    }    
+    }  
+    
+    
 }    
 
 .h5Div{
+    
     display: flex;
     justify-content: center;
+    width: 100%;
 }
 
 .h5Canvas{
 color: #0D6EFD;
 margin:0.5rem;
+}
+
+.h5Div{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.canvas1{
+    position: absolute;
+    visibility:hidden;
+}
+
+.canvas2{
+    
+    margin: 0 auto 0;
+   
 }
 
