--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -15,8 +15,12 @@
         width: 100%;
         height: 100%;
     }  
-    
-    
+    .h5Canvas{
+        display: flex;
+        justify-items: center;
+        width: 29%!important;
+        }
+   
 }    
 
 .h5Div{
@@ -26,10 +30,7 @@
     width: 100%;
 }
 
-.h5Canvas{
-color: #0D6EFD;
-margin:0.5rem;
-}
+
 
 .h5Div{
     width: 100%;
