--- a/src/components/Repository/repository.css
+++ b/src/components/Repository/repository.css
@@ -16,6 +16,9 @@
 
 .repoButton{
     margin: 0 auto 0;
+    text-transform: uppercase;
+    font-size: 1.0rem !important;
+    font-weight: bold !important;
 }
 
 .margin{
