--- a/src/components/Repository/repository.css
+++ b/src/components/Repository/repository.css
@@ -43,4 +43,13 @@
 
 .reposirySend{
     margin-top: 0.5rem;
+    text-transform: uppercase;
+    font-size: 1.0rem !important;
+    font-weight: bold !important;
+}
+
+.repoBack{
+    text-transform: uppercase;
+    font-size: 1.0rem !important;
+    font-weight: bold !important;
 }
