--- a/src/components/Repository/repository.css
+++ b/src/components/Repository/repository.css
@@ -5,7 +5,7 @@
 }
 
 .repositoryLink{   
-    margin-top: 4rem;
+    margin-top: 3rem;
     margin-bottom: 5rem;
     
   
@@ -52,4 +52,8 @@
     text-transform: uppercase;
     font-size: 1.0rem !important;
     font-weight: bold !important;
+}
+
+.{
+    font-style: italic;
 }
