--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
     text-transform: uppercase !important;
     font-size: 1.0rem !important;
     font-weight: bold !important;
-    background-color: rgb(134, 108, 108) !important;
+    
 }
 
 .row{
-    --bs-guttr-x:0.5rem !important;
+    padding-left: calc(var(--bs-gutter-x)*0.0) !important;
 }
