nav styles responseive

--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -11,8 +11,8 @@
     display: block;
 }
 @media (max-width: 850px) {
-    .btn{
-        width:max-content
+    .btn-nav{
+        width:100vw;
     }
 }
 
