--- a/src/components/nav/nav.css
+++ b/src/components/nav/nav.css
@@ -13,6 +13,8 @@
     margin: 0 auto 0;
     padding: 0;
     width: 100%;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }
 
 .bd-highlight{
