--- a/src/components/canvas/canvas.css
+++ b/src/components/canvas/canvas.css
@@ -19,9 +19,16 @@
         display: flex;
         justify-items: center;
         width: 25%!important;
+        
         }
    
-}    
+}  
+
+.h5Canvas{
+    text-transform: uppercase ;
+    font-size: 0.8rem ;
+    font-weight: bold;
+    }
 
 .h5Div{
     
